@@ -1,3 +1,7 @@
+2007-02-28  Sven Neumann  <sven@gimp.org>
+
+	* app/tools/gimpmeasuretool.c: made labels selectable.
+
 2007-02-28  João S. O. Bueno Calligaris <gwidion@mpc.com.br>
 
         * app/tools/gimprectangletool.c: removes recursive code 
